fix: change action return types and status code

--- a/MyWebApiApp/appsettings.json
+++ b/MyWebApiApp/appsettings.json
@@ -1,4 +1,7 @@
 {
+    "AppSettings": {
+        "SecretKey": "DemoASPNETCoreWebAPI"
+    },
     "ConnectionStrings": {
         "MyDB": "Data Source=.;Initial Catalog=WebAPI;Integrated Security=True"
     },
